# svg-to-constellation

./: .gitignore  CMakeLists.txt  README.md
files/: minecraft.constellation.txt  molumen_Lenin_silhouette.constellation
source/: converter.hpp  main.cpp  utils.hpp
source/stage/: align.hpp  svg.hpp  write.hpp
